Do not always bring refreshed resources in

It would horribly glitch on some searches, for example when doing by
appstream url where we cannot generically filter since some resources
will have several of them.

BUG: 432654


(cherry picked from commit 2dc0f67f90770dfdb57a6465fd1a857124397c58)